ASSERTION FAILED: willBeComposited == needsToBeComposited(layer, queryData) https://bugs.webkit.org/show_bug.cgi?id=257970 rdar://110656130

Reviewed by Antti Koivisto.

Notify the renderer when a new MediaPlayer has been created or destroyed, as
the value of canAccelerateVideoRendering() may have changed.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::clearMediaPlayer):

Canonical link: https://commits.webkit.org/265656@main